# aws-labs

./: .gitignore  .gitmodules  README.md  cli_s3-multi-part-upload.sh
CloudFormations/: cfn-bbp-role.yaml  cfn-gha-update-s3-purge-cdn.yaml  cfn-githubaction-aws-oidc.yaml  cfn-githubaction-role.yaml
MyWidgetService/: cdk.json
aws-sdk/: .env.example  get-from-secret-manager.py  pyproject.toml
cdk-codecommit-pr-codebuild/: Makefile  README.md  cdk.json  package-lock.json  package.json
cdk-ecs/: .env.example  Makefile  README.md  package-lock.json
cdk-opensearch/: Makefile  README.md  cdk.json  package.json
cdk-sns-sqs/: README.md  cdk.json  package-lock.json  package.json
cdk-vpc-infra/: README.md  cdk.json  package-lock.json  package.json
ecs-service-connect/: README.md  scripts.sh  serv1.json  serv2.json
example/: apigw-full.yaml  apigw.yaml  cognigo.yaml
lab-cdk-api-lambda-s3/: .gitignore  README.md  cdk.json  demo.rest  demo_upload.txt  package-lock.json  package.json
lab-cdk-asg/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
lab-cdk-ecs/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
lab-cdk-ecs-fargate/: Makefile  README.md  cdk.json  package-lock.json  package.json
lab-cdk-elb/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
lab-cdk-lambda/: README.md  cdk.json  package-lock.json  package.json
lab-cdk-rds/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
lab-cdk-sns-sqs/: README.md  cdk.json  package-lock.json  package.json
(+286 files in other folders)
